# stm32-fmc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl
.github/: bors.toml
.github/workflows/: ci.yml
examples/: stm32h747i-disco.rs
src/: fmc.rs  is42s16400j.rs  is42s32800g.rs  lib.rs  macros.rs  mt48lc4m32b2.rs  nand.rs  sdram.rs
src/devices/: README.md  as4c16m32msa.rs  as4c4m16sa.rs  is42s16400j.rs  is42s32400f.rs  is42s32800g.rs  mod.rs  mt48lc4m32b2.rs  s34ml08g3.rs
src/nand/: device.rs
src/ral/: mod.rs  register.rs
src/ral/peripherals/: fmc.rs  mod.rs
tests/: dummy_pins.rs  sdram_pin.rs
