[package]
name = "stm32-fmc"
version = "0.1.0"
authors = ["Richard Meadows <richard@richard.fish>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "Hardware Abstraction Layer for STM32 Memory Controllers (FMC/FSMC)"
keywords = ["stm32", "fmc", "sdram", "memory"]
repository = "https://github.com/TODO"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = [".gitignore", "README.tpl", ".travis.yml"]

[package.metadata.docs.rs]
# features = ["stm32h743v"]
# targets = ["thumbv7em-none-eabihf"]

[dependencies.log]
version = "^0.4.8"
default-features = false
optional = true

[dependencies]
embedded-hal = "0.2.4"
stm32f7xx-hal = {version = "0.2.0", optional = true}
stm32f4xx-hal = {version = "0.8.3", optional = true}
stm32h7xx-hal = {version = "0.6.0", optional = true}

[features]
device-selected = []

stm32h742 = ["stm32h7xx-hal/stm32h742"]
stm32h743 = ["stm32h7xx-hal/stm32h743"]
stm32h753 = ["stm32h7xx-hal/stm32h753"]
stm32h750 = ["stm32h7xx-hal/stm32h750"]
stm32h742v = ["stm32h7xx-hal/stm32h742v"]
stm32h743v = ["stm32h7xx-hal/stm32h743v"]
stm32h753v = ["stm32h7xx-hal/stm32h753v"]
stm32h750v = ["stm32h7xx-hal/stm32h750v"]
stm32h747cm7 = ["stm32h7xx-hal/stm32h747cm7"]

stm32f479 = ["stm32f4xx-hal/stm32f479", "device-selected"]
stm32f779 = ["stm32f7xx-hal/stm32f779", "device-selected"]

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-itm = "0.4.1"
log = "0.4.8"
cortex-m-log = { version = "0.6.1", features = ["itm", "log-integration"] }

[[example]]
name = "stm32h747i-disco"
required-features = ["stm32h7xx-hal/rt", "stm32h7xx-hal/stm32h747cm7"]
